@@ -100,6 +100,15 @@ public class HdfsDirectory extends BaseDirectory {
   public void close() throws IOException {
     LOG.info("Closing hdfs directory {}", hdfsDirPath);
     fileSystem.close();
+    isOpen = false;
+  }
+
+  /**
+   * Check whether this directory is open or closed. This check may return stale results in the form of false negatives.
+   * @return true if the directory is definitely closed, false if the directory is open or is pending closure
+   */
+  public boolean isClosed() {
+    return !isOpen;
   }
   
   @Override
@@ -241,4 +250,22 @@ public class HdfsDirectory extends BaseDirectory {
     LOG.debug("Sync called on {}", Arrays.toString(names.toArray()));
   }
   
+  @Override
+  public int hashCode() {
+    return hdfsDirPath.hashCode();
+  }
+  
+  @Override
+  public boolean equals(Object obj) {
+    if (obj == this) {
+      return true;
+    }
+    if (obj == null) {
+      return false;
+    }
+    if (!(obj instanceof HdfsDirectory)) {
+      return false;
+    }
+    return this.hdfsDirPath.equals(((HdfsDirectory) obj).hdfsDirPath);
+  }
 }
